[package]
name = "level"
version = "0.1.0"
edition = "2024"


[dependencies]
microbit-v2 = "0.16.0"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
lsm303agr = "1.1.0"
critical-section-lock-mut = "0.1.2"
critical-section = "1.2.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[profile.release]
debug = true

